hphp/hack/test/typecheck/ifc/ifc_external_without_attribute.php.exp
File "ifc_external_without_attribute.php", line 9, characters 24-37:
Cannot use unstable feature: `ifc` (Parsing[1002])
